import java.math.BigDecimal;

public class Simulation {
    private BigDecimal montantEstime;
    /** @pdRoleInfo name=Utilisateur mult=1 */
    private Utilisateur utilisateur;

    public void calculer() {
        // Calcul du montant estimé.
    }
}
