import java.util.List;

/**
 * Commercial Moov Africa
 */
public class Commercial {
    
    // Attributs
    private String id;
    private String nom;
    private String prenom;
    private String matricule;
    
    // Relations
    private List<Company> companies;
}
