@startuml DiagrammeClassesMoovEFacturesSimple
title Diagramme de classes simplifié — Moov e-Factures

left to right direction
skinparam backgroundColor white
skinparam shadowing false
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam class {
  FontName Arial
  FontSize 11
  BorderColor #333333
  ArrowColor #333333
  BackgroundColor #EAF2F8
}
skinparam class<<acteur>> {
  BackgroundColor #FCE4EC
  BorderColor #8E3B55
}
skinparam class<<compte>> {
  BackgroundColor #DDEBF7
  BorderColor #2F5597
}
skinparam class<<metier>> {
  BackgroundColor #FFF2CC
  BorderColor #7F6000
}
skinparam class<<facturation>> {
  BackgroundColor #E2F0D9
  BorderColor #548235
}
skinparam class<<catalogue>> {
  BackgroundColor #E4DFEC
  BorderColor #7030A0
}
skinparam note {
  BackgroundColor #F8F8F8
  BorderColor #999999
  FontSize 10
}

' =========================
' Comptes et acteurs
' =========================
abstract class Utilisateur <<compte>> {
  id : UUID
  nom : String
  email : String
  role : String
  --
  seConnecter()
  gererProfil()
}

abstract class OperateurFacturation <<compte>> {
  --
  consulterTableauDeBord()
}

class SuperAdministrateur <<acteur>> {
  --
  gererUtilisateurs()
}

class ChefFacturation <<acteur>> {
  --
  validerDemande()
  rejeterDemande(motif)
}

class AgentFacturation <<acteur>> {
  --
  gererContrats()
  publierFactures()
}

class Commercial <<acteur>> {
  matricule : String
  --
  soumettreDemande()
}

class Payeur <<acteur>> {
  --
  consulterFactures()
  simulerFacturation()
}

class Employe <<acteur>> {
  msisdn : String
  --
  consulterFactureSommaire()
  simulerConsommation()
}

Utilisateur <|-- OperateurFacturation
Utilisateur <|-- SuperAdministrateur
Utilisateur <|-- Commercial
Utilisateur <|-- Payeur
Utilisateur <|-- Employe
OperateurFacturation <|-- ChefFacturation
OperateurFacturation <|-- AgentFacturation

' =========================
' Contrats et catalogue
' =========================
class Contrat <<metier>> {
  id : UUID
  code : String
  raisonSociale : String
  categorie : String
  statut : String
  dateEffet : Date
  resilie : Boolean
  --
  ajouterLigne()
  resilier(motif)
}

class DemandeContrat <<metier>> {
  id : UUID
  statut : String
  motifRejet : String
  dateSoumission : Date
  --
  soumettre()
  valider()
  rejeter(motif)
}

class Ligne <<metier>> {
  id : UUID
  msisdn : String[8]
  forfait : Decimal
  cycle : String
  statut : String
  --
  affecterEmploye()
  ajouterService()
}

class Forfait <<catalogue>> {
  id : UUID
  nom : String
  prixMensuel : Decimal
  --
  modifierTarif()
}

class Service <<catalogue>> {
  id : UUID
  nom : String
  type : String
  prix : Decimal
  --
  modifierTarif()
}

Commercial "1" -- "0..*" DemandeContrat : soumet
ChefFacturation "1" -- "0..*" DemandeContrat : traite
DemandeContrat "0..1" --> "0..1" Contrat : devient
Commercial "0..1" -- "0..*" Contrat : signe
Payeur "0..1" -- "0..*" Contrat : gère
Contrat "1" *-- "0..*" Ligne : contient
Employe "0..1" -- "0..1" Ligne : utilise
Forfait "0..1" -- "0..*" Ligne : appliqué
Ligne "0..*" -- "0..*" Service : options
AgentFacturation "1" -- "0..*" Contrat : gère
SuperAdministrateur "1" -- "0..*" Forfait : configure
SuperAdministrateur "1" -- "0..*" Service : configure

' =========================
' Facturation et traitements
' =========================
class Facture <<facturation>> {
  id : UUID
  numero : String
  type : String
  periode : String
  montantTTC : Decimal
  statut : String
  fichierPDF : File
  --
  consulter()
  telechargerPDF()
}

class Publication <<facturation>> {
  id : UUID
  periode : String
  statut : String
  datePublication : Date
  --
  publier()
  consulterHistorique()
}

class TraitementPDF <<facturation>> {
  id : UUID
  fichierSource : File
  statut : String
  progression : Integer
  --
  decouper()
  suivreProgression()
}

class Simulation <<facturation>> {
  id : UUID
  montantEstime : Decimal
  dateSimulation : Date
  --
  calculer()
}

class NotificationFacture <<facturation>> {
  canal : String
  destinataire : String
  statut : String
  --
  envoyer()
}

Contrat "1" *-- "0..*" Facture : factures globales
Ligne "0..1" -- "0..*" Facture : facture sommaire
Publication "1" o-- "0..*" Facture : publie
TraitementPDF "1" --> "0..*" Facture : produit
AgentFacturation "1" -- "0..*" Publication : lance
AgentFacturation "1" -- "0..*" TraitementPDF : exécute
Utilisateur "1" -- "0..*" Simulation : réalise
Ligne "0..1" -- "0..*" Simulation : concerne
Facture "1" *-- "0..*" NotificationFacture : notification
Payeur "1" -- "0..*" Facture : consulte
Employe "1" -- "0..*" Facture : consulte

note right of Utilisateur
  Les acteurs correspondent aux valeurs du champ
  User.role dans l'application Django.
end note

note bottom of Facture
  type = GLOBALE ou SOMMAIRE
end note

legend bottom
  Rose : acteurs | Bleu : comptes | Jaune : contrats
  Vert : facturation | Violet : catalogue
  *-- : composition | -- : association | <|-- : héritage
endlegend
@enduml
